Thêm page viewUser

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ table, tr, th, td {
 input {
     margin-bottom: 10px;
 }
-img {
+#mobile-manage img {
     width: 50px;
 }
 
@@ -16,5 +16,9 @@ td:first-child {
 }
 
 .form-group {
+    width: 100%;
+}
+
+#mobile-all img {
     width: 100%;
 }
